# durable-project-catalog

./: .dockerignore  Cargo.toml  Dockerfile  README.md  devenv.nix
.github/workflows/: ci.yml  release.yml
extra/: install.ps1
lib/dprojc-cli/: Cargo.toml
lib/dprojc-cli/src/: commands.rs  lib.rs  main.rs  output.rs
lib/dprojc-config/: Cargo.toml
lib/dprojc-config/src/: lib.rs
lib/dprojc-core/: Cargo.toml
lib/dprojc-core/src/: lib.rs
lib/dprojc-db/: Cargo.toml
lib/dprojc-db/src/: lib.rs
lib/dprojc-docs/: Cargo.toml
lib/dprojc-docs/src/: lib.rs
lib/dprojc-docs/src/templates/: index.hbs  project_detail.hbs  projects.hbs  readme.hbs  statistics.hbs
lib/dprojc-scanner/: Cargo.toml
lib/dprojc-scanner/src/: lib.rs
lib/dprojc-shell/: Cargo.toml
lib/dprojc-shell/src/: completions.rs  lib.rs
lib/dprojc-tui/: Cargo.toml
lib/dprojc-tui/src/: lib.rs
lib/dprojc-types/: Cargo.toml
lib/dprojc-types/src/: lib.rs
lib/dprojc-utils/: Cargo.toml
lib/dprojc-utils/src/: lib.rs
scripts/: README.md  build-release.sh  install.sh  tag-release.sh  test-installation.sh  test-releases.sh
scripts/versions/: major_bump.sh  minor_bump.sh  patch_bump.sh
