[workspace]
resolver = "2"
members = [
    "lib/dprojc-cli",
    "lib/dprojc-config",
    "lib/dprojc-core",
    "lib/dprojc-db",
    "lib/dprojc-docs",
    "lib/dprojc-scanner",
    "lib/dprojc-shell",
    "lib/dprojc-tui",
    "lib/dprojc-types",
    "lib/dprojc-utils",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Durable Programming LLC <commercial@durableprogramming.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/durable-project-catalog"
homepage = "https://github.com/durableprogramming/durable-project-catalog"
documentation = "https://docs.rs/dprojc-cli"
readme = "README.md"
keywords = ["catalog", "projects", "scanner", "directory", "cli"]
categories = ["command-line-utilities", "filesystem", "development-tools"]
description = "A pragmatic system for discovering and cataloging software projects within deeply nested directory structures"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"
regex = "1.5"
rusqlite = { version = "0.28", features = ["bundled"] }
dirs = "4.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.25"
ratatui = "0.20"
fuzzy-matcher = "0.3"
tempfile = "3.0"
hex = "0.4"
handlebars = "4.3"
pulldown-cmark = "0.9"
syntect = "5.0"
comfy-table = "7.0"

# Local crates
dprojc-types = { path = "lib/dprojc-types" }
dprojc-utils = { path = "lib/dprojc-utils" }
dprojc-scanner = { path = "lib/dprojc-scanner" }
dprojc-config = { path = "lib/dprojc-config" }
dprojc-db = { path = "lib/dprojc-db" }
dprojc-core = { path = "lib/dprojc-core" }
dprojc-docs = { path = "lib/dprojc-docs" }
dprojc-shell = { path = "lib/dprojc-shell" }
dprojc-tui = { path = "lib/dprojc-tui" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
