[package]
name = "dprojc-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for the Durable Project Catalog"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dprojc-types = { path = "../dprojc-types" }

[dev-dependencies]
tempfile.workspace = true