[package]
name = "dprojc-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database layer for the Durable Project Catalog"

[dependencies]
dprojc-types = { path = "../dprojc-types" }
dprojc-utils = { path = "../dprojc-utils" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
tempfile.workspace = true
hex = "0.4"