[package]
name = "dprojc-docs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Documentation generation for the Durable Project Catalog"

[dependencies]
dprojc-types = { path = "../dprojc-types" }
dprojc-utils = { path = "../dprojc-utils" }
dprojc-core = { path = "../dprojc-core" }
dprojc-db = { path = "../dprojc-db" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
comfy-table = { workspace = true }
handlebars = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }