[package]
name = "dprojc-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common types for the Durable Project Catalog"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true